added randomizer page, styled detail page, added banner to home page

--- a/src/components/DetailPage.css
+++ b/src/components/DetailPage.css
@@ -1,4 +1,48 @@
+/* div {
+  background-color: #EFEFEF;
+  padding-bottom: 101px;
+} */
+
+.background {
+  padding-top: 100px;
+}
+
+.empty {
+  padding-top: 0px;
+}
+
+.details {
+  margin-top: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #F8F9FA;
+  margin-left: 475px;
+  margin-right: 475px;
+  border-radius: 4px;
+}
+
 .details p {
-  text-align: center;
+  text-align: left;
   font-size: 20px;
+  padding-left: 25px;
+}
+
+.recommendations {
+  font-weight: bold;
+  margin-top: 30px;
+  margin-left: 285px;
+  font-size: 25px;
+}
+
+.category {
+  text-transform: capitalize;
+}
+
+a {
+  color: #309aff;
+}
+
+a:hover {
+  color: #0282fc;
+  text-decoration: none;
 }
