--- a/src/components/Brewery.css
+++ b/src/components/Brewery.css
@@ -1,15 +1,18 @@
+.main-container {
+  background-color: #EFEFEF;
+}
+
 .banner {
   color: white;
   text-align: center;
-  height: 100vh;
-  /* if you have a 70px navbar => height: calc(100vh - 70px); */
+  height: 90vh;
   background-size: cover !important;
   display: flex;
   align-items: center;
   justify-content: center;
   background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%,
   rgba(0,36,61,0.6) 50%),
-  url('http://bitterminnesotabrewerytours.com/wp-content/uploads/2014/02/boston-beer-tours-glass.jpg');
+  url('../banner.jpg');
   background-size: cover;
 }
 .banner h1 {
@@ -19,35 +22,30 @@
 }
 .banner p {
   font-size: 25px;
-  font-weight: lighter;
   color: rgb(255, 255, 255);
-  opacity: 0.6;
-  margin-bottom: 30px;
+  opacity: 0.8;
+  margin-bottom: 120px;
 }
 
 .card {
   height: 175px;
-  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
   background-position: center;
-  color: white;
+  color: black;
   position: relative;
-  background-image: linear-gradient(rgba(0,0,0,0.3),
-  rgba(0,0,0,0.2)),
-  url('http://bitterminnesotabrewerytours.com/wp-content/uploads/2014/02/boston-beer-tours-glass.jpg');
-  margin: 20px 0;
+  margin: 25px 0;
 }
 
 .card:hover {
   opacity: 0.9;
 }
 
-.card-category {
+.card-name {
   position: absolute;
   top: 10px;
   left: 10px;
   font-size: 15px;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 .card-description {
   position: absolute;
@@ -56,10 +54,14 @@
 }
 .card-description h2 {
   font-size: 16px;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 .card-description p {
   font-size: 14px;
   opacity: 0.7;
   font-weight: lighter;
+}
+
+#dropdown-no-caret {
+  margin-top: 15px;
 }
