--- a/src/components/Random.css
+++ b/src/components/Random.css
@@ -1,12 +1,14 @@
 .main {
   padding-top: 100px;
+  min-height: 80vh;
+  background-color: #F8F9FA;
 }
 
 .details {
   margin-top: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
-  background-color: #F8F9FA;
+  background-color: white;
   margin-left: 475px;
   margin-right: 475px;
   border-radius: 4px;
@@ -16,4 +18,23 @@
   text-align: left;
   font-size: 20px;
   padding-left: 25px;
+}
+
+.button {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.btn-random {
+  margin-top: 30px;
+  border-radius: 10px;
+  background-color: #309aff;
+  color: white;
+  padding: 10px;
+  font-size: 20px;
+}
+
+.btn-random:hover {
+  background-color: #0282fc;
+  cursor: pointer;
 }
