--- a/src/components/DetailPage.css
+++ b/src/components/DetailPage.css
@@ -1,6 +1,6 @@
 .background {
   padding-top: 100px;
-  background-color: #EFEFEF;
+  background-color: #ffd9a7;
   min-height: 100vh;
 }
 
@@ -42,32 +42,36 @@ a:hover {
 
 .card {
   height: 175px;
+  width: 320px;
   background-size: cover !important;
   background-position: center;
   color: black;
   position: relative;
   margin: 25px 0;
-}
-
-.card:hover {
-  opacity: 0.9;
+  margin-top: 15px;
+  margin-bottom: 20px;
+  border-radius: 20px;
 }
 
 .card-name {
-  position: absolute;
+  margin-top: 10px;
   top: 20px;
-  left: 20px;
-  font-size: 15px;
+  left: 20%;
+  right: 20%;
+  font-size: 22px;
   text-transform: capitalize;
+  text-align: center;
 }
+
 .card-description {
   position: absolute;
   bottom: 10px;
   left: 10px;
 }
 .card-description h2 {
-  font-size: 16px;
-  text-transform: uppercase;
+  font-size: 18px;
+  text-transform: capitalize;
+  font-weight: lighter;
 }
 .card-description p {
   font-size: 14px;
